examples/netpol-defaultdeny/http_client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: http-server-test
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: 353146681200.dkr.ecr.us-east-1.amazonaws.com/otterize-tools:http-client-test
          imagePullPolicy: Always
